'fixed' layout issues

--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -2,6 +2,11 @@
     font-family: 'Courier', monospace;
 }
 
+p, div {
+    margin:2px;
+    padding:0;
+}
+
 body {
     background: #eeeeff;
 }
@@ -14,18 +19,37 @@ body {
 .app div {
     width: 800px;
     display: flex;
-    max-width: fit-content;
 }
 
 .app div *:first-child {
-    padding-right: 20px;
+    padding-right: 10px;
 }
 
-.pokemonids {
-    overflow:hidden;
+.pokemon_wrapper {
+    height:140px;
+}
+
+.pokemonids_wrapper{
+    height:100px;
+}
+
+.pokemon,.pokemonids {
+    width:630px;
+}
+
+.fieldname {
+    width: 180px;
+}
+
+select {
+    max-width: 80px;
 }
 
 .img {
     width:848px;
     height:345px;
+}
+
+.submitbutton {
+    margin-top:20px;
 }
